<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@color/item_background"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tvNombreCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvCorreoCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email" />

    <TextView
        android:id="@+id/tvTelefonoCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phone" />
</LinearLayout>

