<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <Button
            android:id="@+id/btnProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_products" />

        <Button
            android:id="@+id/btnClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_clients"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnVentas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sales"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            android:layout_marginTop="32dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
