<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/etNombreCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_client_name"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etCorreoCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_client_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etTelefonoCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_client_phone"
            android:inputType="phone"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnGuardarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_client" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
