<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".RegistrarVentaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_client"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/spinnerClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_products"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/listaProductos"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_sale"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/button_text_color"
            android:padding="12dp"
            android:elevation="4dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
